[package]
name = "vspider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
env_logger = "0.11.5"
indicatif = "0.17.8"
log = "0.4.22"
m3u8-rs = "6.0.0"
nom = "7.1.3"
reqwest = "0.12.7"
scraper = "0.20.0"
serde_json = "1.0.128"
sha256 = "1.5.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
